--- a/market-ajh/templates/shop/index.html.twig
+++ b/market-ajh/templates/shop/index.html.twig
@@ -3,9 +3,9 @@
 {% block title %}Sélection de la guilde{% endblock %}
 
 {% block body %}
-  <div class="container mx-auto p-6 bg-GREEN rounded-lg shadow-lg">
+  <div class="container p-6 bg-GREEN rounded-lg shadow-lg mt-5">
     <h1 class="text-3xl font-extrabold mb-6 text-800 text-WHITE text-center">Choisissez une guilde</h1>
-    <ul class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 ">
+    <ul class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6">
       {% for guild in guilds %}
         <li class="flex flex-col items-center justify-center bg-VIOLET rounded-lg p-4 shadow hover:shadow-md transition mb-0 transform hover:scale-110 duration-200 border-2 border-transparent hover:border-WHITE">
           <a href="{{ path('shop_show', {id: guild.id}) }}" class="block w-full h-full flex flex-col items-center">
@@ -14,7 +14,7 @@
           </a>
         </li>
       {% else %}
-        <li class="col-span-full text-center text-gray-500 py-8">Aucune guilde disponible.</li>
+        <li class="w-full text-center text-gray-500 py-8">Aucune guilde disponible.</li>
       {% endfor %}
     </ul>
   </div>
