--- a/market-ajh/templates/news/index.html.twig
+++ b/market-ajh/templates/news/index.html.twig
@@ -1,25 +1,11 @@
+{# templates/news/index.html.twig #}
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello NewsController!{% endblock %}
+{% block title %}{{ nomdepage }}{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="flex justify-center items-center min-h-screen">
-    <form action="{{ path('app_news_create') }}" method="post" class="bg-GREEN p-8 rounded-lg shadow-lg w-[45%]">
-        <div class="mb-4">
-            <label for="titre" class="block text-black font-medium mb-2">Titre :</label>
-            <input type="text" id="titre" name="titre" class="w-full px-3 py-2 border border-gray-300 rounded-md text-black">
-        </div>
-        <div class="mb-4">
-            <label for="contenu" class="block text-black font-medium mb-2">Contenu :</label>
-            <textarea id="contenu" name="contenu" rows="10" class="w-full px-3 py-2 border border-gray-300 rounded-md text-black"></textarea>
-        </div>
-        
-        <button type="submit" class="w-full bg-VIOLET text-white py-2 px-4 rounded-md hover:bg-blue-600 transition duration-200">Créer</button>
-    </form>
-</div>
+  <div class="p-8">
+    <h1 class="text-2xl mb-4">Gestion des nouvelles</h1>
+    <a href="{{ path('app_news_create') }}" class="bg-VIOLET text-white py-2 px-4 rounded-md">Créer une nouvelle</a>
+  </div>
 {% endblock %}
