--- a/market-ajh/templates/base.html.twig
+++ b/market-ajh/templates/base.html.twig
@@ -16,7 +16,7 @@
   </head>
   <body
     class="bg-GRAY flex flex-col min-h-screen"
-    style="background-image: url('{{ asset('images/wallpapers/' ~ wallpaper) }}'); background-size: cover; background-repeat: no-repeat; background-position: center; background-attachment: fixed;"
+    style="background-image: url('{{ asset('images/wallpapers/' ~ app.user.wallpaper) }}'); background-size: cover; background-repeat: no-repeat; background-position: center; background-attachment: fixed;"
   >
     <!-- Navigation -->
     <nav class="bg-BLACK shadow-md p-4 relative z-50">
