--- a/market-ajh/templates/shop/index.html.twig
+++ b/market-ajh/templates/shop/index.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
   <div class="container p-6 bg-GREEN rounded-lg shadow-lg mt-5">
     <h1 class="text-3xl font-extrabold mb-6 text-800 text-WHITE text-center">Choisissez une guilde</h1>
-    <ul class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6">
+    <ul class="grid grid-cols-[repeat(auto-fit,minmax(200px,1fr))] gap-6">
       {% for guild in guilds %}
         <li class="flex flex-col items-center justify-center bg-VIOLET rounded-lg p-4 shadow hover:shadow-md transition mb-0 transform hover:scale-110 duration-200 border-2 border-transparent hover:border-WHITE">
           <a href="{{ path('shop_show', {id: guild.id}) }}" class="block w-full h-full flex flex-col items-center">
