--- a/market-ajh/templates/guild/index.html.twig
+++ b/market-ajh/templates/guild/index.html.twig
@@ -6,7 +6,7 @@
     <form method="get" class="mb-8 flex flex-col md:flex-column items-center gap-4">
         <label for="user-search" class="font-semibold">Rechercher un utilisateur</label>
         
-            <input type="text" id="user-search" name="user_search" value="{{ app.request.get('user_search') }}" class="border border-gray rounded px-3 py-2 focus:outline-none focus:ring-2 focus:ring-violet">
+            <input type="text" id="user-search" name="user_search" value="{{ app.request.get('user_search') }}" class="border border-gray rounded px-3 py-2 focus:outline-none focus:ring-2 bg-WHITE focus:ring-violet">
             <button type="submit" class="bg-VIOLET text-WHITE px-4 py-2 rounded hover:bg-BLACK transition">Rechercher</button>
         
     </form>
