--- a/market-ajh/templates/order/index.html.twig
+++ b/market-ajh/templates/order/index.html.twig
@@ -11,7 +11,7 @@
             <div class="w-60">
                 <label for="player" class="block text-sm font-medium text-WHITE">Joueur</label>
                 <select name="player" id="player"
-                        class="mt-1 block w-full border-gray-300 rounded shadow-sm focus:ring focus:border-blue-300">
+                        class="mt-1 block w-full border-gray-300 bg-WHITE rounded shadow-sm focus:ring focus:border-blue-300">
                     <option value="">Tous</option>
                     {% for player in players %}
                         <option value="{{ player.id }}"
@@ -25,7 +25,7 @@
             <div class="w-60">
                 <label for="status" class="block text-sm font-medium text-WHITE">Statut</label>
                 <select name="status" id="status"
-                        class="mt-1 block w-full border-gray-300 rounded shadow-sm focus:ring focus:border-blue-300">
+                        class="mt-1 block w-full border-gray-300 bg-WHITE rounded shadow-sm focus:ring focus:border-blue-300">
                     <option value="">Tous</option>
                     {% for key, label in statuses %}
                         <option value="{{ key }}"
