--- a/market-ajh/templates/security/login.html.twig
+++ b/market-ajh/templates/security/login.html.twig
@@ -24,13 +24,13 @@
             <div class="space-y-2">
                 <label for="inputUsername" class="block mb-1 font-medium">Nom d'utilisateur</label>
                 <input type="text" value="{{ last_username }}" name="username" id="inputUsername" 
-                       class="w-full px-4 py-2 rounded text-BLACK" autocomplete="username" required autofocus>
+                       class="w-full px-4 py-2 rounded text-BLACK bg-WHITE" autocomplete="username" required autofocus>
             </div>
 
             <div class="space-y-2">
                 <label for="inputPassword" class="block mb-1 font-medium">Mot de passe</label>
                 <input type="password" name="password" id="inputPassword" 
-                       class="w-full px-4 py-2 rounded text-BLACK" autocomplete="current-password" required>
+                       class="w-full px-4 py-2 rounded text-BLACK bg-WHITE" autocomplete="current-password" required>
             </div>
 
             <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
