ajout d'un formulaire pour bypass la maintenance (code dans la var MAINTENANCE_BYPASS_CODE)

--- a/market-ajh/templates/base.html.twig
+++ b/market-ajh/templates/base.html.twig
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{% block title %}Welcome!{% endblock %}</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="icon" href="{{ asset('images/logo_guilde.jpg') }}" />
+    <link rel="icon" href="{{ asset('build/images/logo_guilde.jpg') }}" />
     {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
       <link rel="stylesheet" href="{{ asset('build/app.css') }}" />
