changement du nom de l'onglet. Ajout d'une page pour ajouter son pseudo minecraft et discord et pour changer de fond d'écran

--- a/market-ajh/templates/base.html.twig
+++ b/market-ajh/templates/base.html.twig
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{% block title %}Welcome!{% endblock %}</title>
+    <title>{% block title %}market-ajh{% endblock %}</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="icon" href="{{ asset('build/images/logo_guilde.jpg') }}" />
     {% block stylesheets %}
